[package]
name = "tui-event-controller"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/tui-event-controller"
description = "An event manager for ratatui/crossterm events"
keywords = ["crossterm", "events", "tui", "ratatui"]
readme = "README.md"
license = "MIT"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }

[[example]]
name = "app"
